@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2008-02-21 13:18:10 $
+ * $Date: 2008-02-21 13:30:19 $
  *
  * Copyright 2005 Øyvind Kolås <pippin@freedesktop.org>
  * Copyright 2004-2005 MenTaLguY <mental@rydia.com>
@@ -104,6 +104,7 @@ RB_CAIRO_VAR VALUE rb_cCairo_PDFSurface;
 RB_CAIRO_VAR VALUE rb_cCairo_PSSurface;
 RB_CAIRO_VAR VALUE rb_cCairo_SVGSurface;
 RB_CAIRO_VAR VALUE rb_cCairo_Win32Surface;
+RB_CAIRO_VAR VALUE rb_cCairo_Win32PrintingSurface;
 /* For backward compatibility*/
 #define rb_cCairo_WIN32Surface rb_cCairo_Win32Surface
 RB_CAIRO_VAR VALUE rb_cCairo_QuartzSurface;
